--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redis": "^4.0.4",
     "serve-favicon": "^2.5.0",
     "underscore": "^1.13.2",
+    "uuid": "^9.0.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   }
