--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "node ./server/app.js",
     "pretest": "eslint ./server --fix",
     "test": "echo \"Tests complete\"",
+    "css-build": "node-sass --omit-source-map-url sass/mystyles.scss hosted/bulma.css",
     "heroku-postbuild": "webpack"
   },
   "keywords": [
@@ -28,9 +29,11 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
+    "bulma": "^0.9.4",
     "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
+    "node-sass": "^8.0.0",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
@@ -49,7 +52,7 @@
     "serve-favicon": "^2.5.0",
     "underscore": "^1.13.2",
     "uuid": "^9.0.0",
-    "webpack": "^5.70.0",
+    "webpack": "^5.75.0",
     "webpack-cli": "^4.9.2"
   }
 }
